@@ -6,6 +6,7 @@ BUGS:
 
 version 0.9.0 - Not released, available at https://simupop.svn.sourceforge.net/svnroot/simupop/trunk
   - CHG: add population::setSubPopByIndInfo to allow flexible migration.
+  - CHG: migrator now uses an information field "migrate_to".
 
 version 0.8.9 - tagged, but not publically released (rev 1948).
   - DOC: Adjust reference output for simuPOP classes.
